# thinklucent

./: .gitignore  Cargo.toml  Makefile  README.md  build.lisp  install  package.lisp
man/: thinklucent.1
scripts/: thinklucent-uninstall  thinklucent-update
src/: hardware.lisp  main.lisp  shell.lisp
